<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RatingPalApp</string>
    <string name="lbl_journey_id">Journey ID</string>
    <string name="lbl_customer_num">Customer Number</string>
    <string name="lbl_localpal_num">Local Pal Number</string>
    <string name="lbl_rate">Rate</string>
    <string name="lbl_date">Date</string>
    <string name="roll_no">Enter Rollno: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="show_info">Show Information</string>
</resources>
